home page updated

--- a/blog_x_app/templates/home.html
+++ b/blog_x_app/templates/home.html
@@ -49,7 +49,7 @@
                         <div class="full">
                            <div class="center-desk">
                               <div class="logo">
-                                 <a href="/home/"><img src="/static/images/logo.png" alt="blog x" /> blog x</a>
+                                 <a href="/home/"> blog x</a>
                               </div>
                            </div>
                         </div>
